syntax = "proto3";

option go_package = "/pb";

import "google/protobuf/empty.proto";

service OrderService {
    // 新建订单
    rpc CreateOrder(OrderItemReq) returns (OrderItemRes);
    // 订单列表
    rpc OrderList(OrderPagingReq) returns (OrderListRes);
    // 订单详情
    rpc OrderDetail(OrderItemReq) returns (OrderItemDetailRes);
    // 更改状态
    rpc ChangeOrderStatus(OrderStatus) returns (google.protobuf.Empty);
}

message OrderStatus{
    int32 id=1;
    string orderNo=2;
    string status=3;
}

message OrderPagingReq{
    int32 accountId=1;
    int32 PageNo=2;
    int32 PageSize=3;
}

message OrderListRes{
    int32 total=1;
    repeated OrderItemRes itemList=2;
}

message OrderItemReq{
    int32 id=1;
    int32 accountId=2;
    string addr=3;
    string postCode=4;
    string receiver=5;
    string mobile=6;
    string payType=7;
}

message OrderItemRes{
    int32 Id=1;
    int32 accountId=2;
    string payType=3;
    string OrderNum=4;
    string postCode=5;
    float amount=6;
    string addr=7;
    string receiver=8;
    string mobile=9;
    string status=10;
    string createTime=11;
}

message OrderItemDetailRes{
    OrderItemRes Order=1;
    repeated OrderProductRes productList=2;
}

message OrderProductRes{
    int32 id=1;
    int32 OrderId=2;
    int32 ProductId=3;
    int32 num=4;
    string productName=5;
    float realPrice=6;
    string coverImage=7;

}